2010-06-15  Luis Machado  <luisgpm@br.ibm.com>

	* sysdeps/powerpc/powerpc32/power6/fpu/s_copysign.S: New file.
	* sysdeps/powerpc/powerpc32/power6/fpu/s_copysignf.S: New file.
	* sysdeps/powerpc/powerpc64/power6/fpu/s_copysign.S: New file.
	* sysdeps/powerpc/powerpc64/power6/fpu/s_copysignf.S: New file.

2010-07-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/fpathconf.c (__fpathconf): Use __fcntl not
	fcntl.

2010-07-06  Andreas Schwab  <schwab@redhat.com>

	* elf/dl-version.c (match_symbol): Don't pass NULL occation to
	dl_signal_cerror.

2010-07-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/fpathconf.c (__fpathconf): Implement
	_PC_PIPE_BUF using F_GETPIPE_SZ.

2010-07-05  Roland McGrath  <roland@redhat.com>

	* manual/arith.texi (Rounding Functions): Fix rint description
	implicit in round description.

2010-07-02  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile: Fix linking for a few tests to make recent linker
	happy.

2010-06-30  Andreas Schwab  <schwab@redhat.com>

	* dlfcn/Makefile (LDLIBS-bug-atexit3-lib.so): Readd
	$(common-objpfx)libc_nonshared.a.

2010-06-21  Luis Machado  <luisgpm@br.ibm.com>

	* sysdeps/powerpc/powerpc32/970/fpu/Implies: Remove.
	* sysdeps/powerpc/powerpc32/power5/fpu/Implies: Remove.
	* sysdeps/powerpc/powerpc32/power5+/fpu/Implies: Remove.
	* sysdeps/powerpc/powerpc32/power6x/fpu/Implies: Remove.
	* sysdeps/powerpc/powerpc64/970/fpu/Implies: Remove.
	* sysdeps/powerpc/powerpc64/power5/fpu/Implies: Remove.
	* sysdeps/powerpc/powerpc64/power5+/fpu/Implies: Remove.
	* sysdeps/powerpc/powerpc64/power6x/fpu/Implies: Remove.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/970/fpu/Implies: Remove.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/power4/fpu/Implies: Remove.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/power5/fpu/Implies: Remove.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/power5+/fpu/Implies: Remove.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/power6/fpu/Implies: Remove.